// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog> renders 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {children} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": undefined,
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                false,
                undefined,
                undefined,
              ]
            }
          >
            lorem ipsum...
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {highlight} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 907.1200000000001,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {onClose} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                undefined,
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                    "width": "auto",
                  },
                  undefined,
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": undefined,
                  },
                  undefined,
                  Object {
                    "height": 32,
                    "paddingHorizontal": 8,
                  },
                  Object {
                    "position": "absolute",
                    "right": 8,
                    "top": 8,
                    "zIndex": 1,
                  },
                ],
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            >
              <Text />
            </View>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#191919",
                    "height": 0,
                    "opacity": 0,
                    "width": 0,
                    "zIndex": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {position} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "justifyContent": "flex-end",
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 907.1200000000001,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {style} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        Object {
          "backgroundColor": "#e85a7e",
          "height": "50%",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Object {
                "backgroundColor": "#62e6ac",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {visible} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
